[gd_scene load_steps=4 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Design Notes.gd" type="Script" id=2]
[ext_resource path="res://GUI/PauseMenu.tscn" type="PackedScene" id=3]

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="Design Notes" type="Node" parent="."]
script = ExtResource( 2 )

[node name="LevelContainer" type="Node2D" parent="."]

[node name="GUIContainer" type="CanvasLayer" parent="."]

[node name="FullRect" type="ReferenceRect" parent="GUIContainer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CenterContainer" type="CenterContainer" parent="GUIContainer/FullRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -150.0
margin_right = 200.0
margin_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="DialogBoxes" type="Control" parent="GUIContainer/FullRect/CenterContainer"]
margin_left = 200.0
margin_top = 150.0
margin_right = 200.0
margin_bottom = 150.0

[node name="PauseMenu" parent="GUIContainer/FullRect" instance=ExtResource( 3 )]
visible = false

